--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -10,11 +10,11 @@ repository.workspace = true
 
 [dependencies]
 # Workspace crates
-provekit-common.workspace = true
+provekit-common = { workspace = true, default-features = false }
 provekit-gnark.workspace = true
-provekit-prover.workspace = true
+provekit-prover = { workspace = true, default-features = false }
 provekit-r1cs-compiler.workspace = true
-provekit-verifier.workspace = true
+provekit-verifier = { workspace = true, default-features = false }
 
 # Noir language
 acir.workspace = true
@@ -33,6 +33,8 @@ tracing-tracy = { workspace = true, optional = true, features = ["default", "sam
 workspace = true
 
 [features]
-default = ["profiling-allocator"]
+default = ["profiling-allocator", "hash-skyscraper"]
 profiling-allocator = []
 tracy = ["dep:tracing-tracy"]
+hash-sha256 = ["provekit-common/hash-sha256", "provekit-prover/hash-sha256", "provekit-verifier/hash-sha256"]
+hash-skyscraper = ["provekit-common/hash-skyscraper", "provekit-prover/hash-skyscraper", "provekit-verifier/hash-skyscraper"]
