feat: add script for generating benchmarks

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Cargo.lock
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 circuit_stats_examples/
+
+benchmark_results/
