--- a/tooling/cli/Cargo.toml
+++ b/tooling/cli/Cargo.toml
@@ -39,4 +39,5 @@ tracy = ["dep:tracing-tracy"]
 hash-dummy = ["provekit-common/hash-dummy", "provekit-prover/hash-dummy", "provekit-verifier/hash-dummy"]
 hash-sha256 = ["provekit-common/hash-sha256", "provekit-prover/hash-sha256", "provekit-verifier/hash-sha256"]
 hash-keccak256 = ["provekit-common/hash-keccak256", "provekit-prover/hash-keccak256", "provekit-verifier/hash-keccak256"]
+hash-blake3 = ["provekit-common/hash-blake3", "provekit-prover/hash-blake3", "provekit-verifier/hash-blake3"]
 hash-skyscraper = ["provekit-common/hash-skyscraper", "provekit-prover/hash-skyscraper", "provekit-verifier/hash-skyscraper"]
