--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,6 +114,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10.9"
 sha3 = "0.10.8"
+blake3 = "1.5.0"
 test-case = "3.3.1"
 toml = "0.8.8"
 tokio = { version = "1.47.1", features = ["full"] }
