--- a/provekit/common/Cargo.toml
+++ b/provekit/common/Cargo.toml
@@ -30,6 +30,7 @@ whir.workspace = true
 anyhow.workspace = true
 sha2.workspace = true
 sha3.workspace = true
+blake3.workspace = true
 bytes.workspace = true
 hex.workspace = true
 itertools.workspace = true
@@ -49,6 +50,7 @@ default = ["hash-skyscraper"]
 hash-dummy = []
 hash-sha256 = []
 hash-keccak256 = []
+hash-blake3 = []
 hash-skyscraper = []
 
 [lints]
