--- a/provekit/common/Cargo.toml
+++ b/provekit/common/Cargo.toml
@@ -31,6 +31,7 @@ anyhow.workspace = true
 sha2.workspace = true
 sha3.workspace = true
 blake3.workspace = true
+light-poseidon.workspace = true
 bytes.workspace = true
 hex.workspace = true
 itertools.workspace = true
@@ -51,6 +52,7 @@ hash-dummy = []
 hash-sha256 = []
 hash-keccak256 = []
 hash-blake3 = []
+hash-poseidon = []
 hash-skyscraper = []
 
 [lints]
