--- a/provekit/prover/Cargo.toml
+++ b/provekit/prover/Cargo.toml
@@ -14,6 +14,7 @@ hash-dummy = ["provekit-common/hash-dummy"]
 hash-sha256 = ["provekit-common/hash-sha256"]
 hash-keccak256 = ["provekit-common/hash-keccak256"]
 hash-blake3 = ["provekit-common/hash-blake3"]
+hash-poseidon = ["provekit-common/hash-poseidon"]
 hash-skyscraper = ["provekit-common/hash-skyscraper"]
 
 [dependencies]
